--- a/ui-tasks/element-show/package.json
+++ b/ui-tasks/element-show/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-list",
+  "name": "element-show",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,13 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "element-plus": "^2.6.1",
-    "vue": "^3.4.15"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.0.4",
     "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.11"
+    "unplugin-vue-components": "^0.27.0",
+    "vite": "^5.2.8"
   }
 }
