--- a/ui-tasks/element-show/package.json
+++ b/ui-tasks/element-show/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "element-plus": "^2.7.6",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8"
