--- a/vue-tasks/todo-list/package.json
+++ b/vue-tasks/todo-list/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.6.1",
+    "pinia": "^2.2.2",
     "vue": "^3.4.15"
   },
   "devDependencies": {
